--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
           yarn
           yarn build
           touch build/.nojekyll
+          ls -lR build
 
       # Runs a set of commands using the runners shell
       - name: Test
