--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "~3.7.2"
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "prettier": "^2.0.5",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
@@ -33,7 +34,8 @@
     "test": "yarn lint && react-scripts test",
     "eject": "react-scripts eject",
     "type-check": "tsc --noEmit",
-    "type-check:watch": "yarn type-check -- --watch"
+    "type-check:watch": "yarn type-check -- --watch",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
