--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "either-validation-demo",
   "version": "0.1.0",
   "license": "MIT",
-  "private": true,
+  "homepage": "http://svdo.github.io/either-validation-demo/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -21,6 +21,7 @@
     "typescript": "~3.7.2"
   },
   "devDependencies": {
+    "gh-pages": "^3.0.0",
     "prettier": "^2.0.5",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
@@ -33,7 +34,9 @@
     "test": "yarn lint && react-scripts test",
     "eject": "react-scripts eject",
     "type-check": "tsc --noEmit",
-    "type-check:watch": "yarn type-check -- --watch"
+    "type-check:watch": "yarn type-check -- --watch",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
