--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "fp-ts": "^2.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
-    "fp-ts-jest-matchers": "1.0.1",
+    "fp-ts-jest-matchers": "^1.0.1",
     "gh-pages": "^3.0.0",
     "prettier": "^2.0.5",
     "tslint": "^6.1.2",
